@@ -45,6 +45,7 @@
       },
       "runtime" : {
          "requires" : {
+            "Pod::L10N::Model" : "0",
             "Pod::Simple" : ">= 3.18, != 3.26, != 3.30"
          }
       },
