@@ -2,6 +2,8 @@ Revision history for Perl module Pod::L10N
 
 {{$NEXT}}
 
+	- separate Pod::L10N::Model to Pod-L10N-Model
+
 1.05 2021-07-21T14:23:56Z
 
 	- fix test failure on Pod::Simple older than 3.28
